<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cloud Collect</string>
    <string name="action_settings">Settings</string>
    
    <!-- Log In -->
    <string name="logo">Logo</string>
    <string name="question_mark">Question Mark</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="or">- or -</string>
    <string name="create_account">Create an Account</string>
    <string name="browse">Browse</string>
    
    <!-- Sign Up -->
    <string name="connect">Connect With:</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="signup">Sign Up</string>
    <string name="cont">Continue</string>
    
    <!-- Browse Collections -->
    <string name="add_collection">Add A Collection</string>
    <string name="search">Search</string>
    <string name="side_nav">Side Navigation</string>
    <string name="browse_by">BROWSE BY:</string>
    <string name="view_profile">View Profile</string>
    <string name="logout">Log Out</string>
    
    <string-array name="collection_categories">
        <item>ALL</item>
        <item>BOOKS</item>
        <item>CARDS</item>
        <item>COINS</item>
        <item>ELECTRONICS</item>
        <item>FIGURINES</item>
        <item>MEDIA</item>
        <item>STAMPS</item>
    </string-array>
    
    <string-array name="collection_category_icons" >
        <item name = "icon0">@drawable/stock_all_icon</item>
        <item name = "icon1">@drawable/stock_book_icon</item>
        <item name = "icon2">@drawable/stock_card_icon</item>
        <item name = "icon3">@drawable/stock_coin_icon</item>
        <item name = "icon4">@drawable/stock_electronic_icon</item>
        <item name = "icon5">@drawable/stock_figurine_icon</item>
        <item name = "icon6">@drawable/stock_media_icon</item>
        <item name = "icon7">@drawable/stock_stamp_icon</item>
    </string-array>
    
    <string name="picture">Picture</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="shade">Shade</string>
    <string name="category">Category:</string>
    <string name="privacy">Private?</string>
    
    <!-- User Profile -->
    <string name="two">2</string>
    <string name="my_collections">My Collections</string>
    <string name="my_favorites">My Favorites</string>
    <string name="create_collection">Create Collection!</string>
    
    <!-- Editing a Collection -->
    <string name="add_item">Add An Item</string>
    <string name="save_changes">Save Changes</string>

</resources>