<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView android:id="@+id/shade"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/shade"
        android:background="#99111111"
        android:onClick="shade_clicked" />
    
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    android:layout_margin="15dp"
		    android:orientation="vertical"
		    android:background="@drawable/rounded_white"
		    android:padding="15dp" >
		    
		    <ImageView android:id="@+id/edit_item_picture"
		        android:layout_width="180dp"
		        android:layout_height="180dp"
		        android:layout_gravity="center"
		        android:contentDescription="@string/picture"
		        android:scaleType="fitCenter"
		        android:src="@drawable/stock_book_icon"
		        android:onClick="change_picture" />
		    
		    <EditText android:id="@+id/edit_item_title"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:hint="@string/title"
		        android:textSize="20sp"
		        android:textStyle="bold"
		        android:textColor="#121212" />
		    
		    <EditText android:id="@+id/edit_item_description"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:hint="@string/description"
		        android:textSize="15sp"
		        android:textColor="#121212" />
		    
		    <Button android:id="@+id/edit_item_save_changes"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:padding="15dp"
		        android:background="@drawable/rounded_purple"
		        android:text="@string/save_changes"
		        android:textColor="@android:color/white"
		        android:onClick="save_changes" />
		    
		</LinearLayout>
		
</RelativeLayout>