<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D9D9D9" >
    
    <ImageView android:id="@+id/collection_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/picture"
        android:src="@drawable/ic_launcher" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@id/collection_image" >
        
        <TextView android:id="@+id/collection_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18sp"
            android:textColor="#FF6300AB"
            android:textStyle="bold" />
        
        <TextView android:id="@+id/collection_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="15sp"
            android:textColor="#232323" />        
        
    </LinearLayout>

</RelativeLayout>