<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent" >
    
    <TextView android:id="@+id/app_logo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_marginLeft="47dp"
		        android:layout_marginRight="47dp"
		        android:text="@string/app_name"
		        android:textColor="#212121"
		        android:textSize="35sp"
		        android:textStyle="italic"
		        android:visibility="invisible" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />
    
    <RelativeLayout android:id="@+id/grey_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:padding="15dp"
        android:background="@drawable/rounded_grey" >        
    
    <RelativeLayout android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_white" >
        
        <EditText android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="18sp" />
        
        <View android:id="@+id/separator1"
		        android:background="#DDDDDD"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:layout_below="@id/signup_username" />
        
        <EditText android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator1"
            android:background="#00000000"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
        
        <View android:id="@+id/separator2"
		        android:background="#DDDDDD"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:layout_below="@id/signup_email" />
        
        <EditText android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator2"
            android:background="#00000000"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp" />
        
    </RelativeLayout>
    
    <Button android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signup"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_blue"
        android:padding="16dp"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="signup_clicked" />
    
    </RelativeLayout>
    
    <TextView android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/or"
        android:textSize="16sp"
        android:textColor="#000000"
        android:textStyle="bold" />
    
    <LinearLayout android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal" >
        
        <Button android:id="@+id/login"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginRight="5dp"
		        android:padding="18dp"
		        android:background="@drawable/rounded_green"
		        android:text="@string/login"
		        android:textSize="20sp"
		        android:textColor="#FFFFFF"
        		android:textStyle="bold"
		        android:onClick="login_clicked" />
        
        <Button android:id="@+id/browse"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:layout_marginLeft="5dp"
		        android:padding="18dp"
		        android:background="@drawable/rounded_purple"
		        android:text="@string/browse"
		        android:textSize="20sp"
		        android:textColor="#FFFFFF"
        		android:textStyle="bold"
		        android:onClick="browse_clicked" />
           
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

</LinearLayout>