<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout android:id="@+id/profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D9D9D9" >
        
        <ImageView android:id="@+id/collection_picture"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="10dp"
            android:contentDescription="@string/picture"
            android:src="@drawable/stock_stamp_icon" />
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/collection_picture"
            android:layout_centerVertical="true"
            android:padding="10dp" >
            
            <TextView android:id="@+id/collection_title"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/title"
		            android:textSize="18sp"
		            android:textColor="#FF6300AB"
		            android:textStyle="bold" />
		        
		        <TextView android:id="@+id/collection_username"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/collection_title"
		            android:text="@string/username"
		            android:textSize="15sp"
		            android:textColor="#232323" /> 
            
        </RelativeLayout>
        
    </RelativeLayout>
    
    <LinearLayout android:id="@+id/add_item_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:gravity="center"
           android:padding="10dp"
           android:orientation="horizontal"
           android:background="@drawable/rounded_blue"
           android:clickable="true"
           android:onClick="add_item"
           android:visibility="gone" >
              
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:contentDescription="@string/add_collection"
                android:src="@drawable/icon_add" />
          
            <TextView android:id="@+id/add_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/add_item"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
	            
        </LinearLayout>
    
    <!-- Eventually figure out Android GridView -->
    <GridView android:id="@+id/gridView"
        android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:numColumns="auto_fit"
		    android:gravity="center"
		    android:columnWidth="100dp"
		    android:stretchMode="columnWidth" />

</LinearLayout>