<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
		    <ImageView android:id="@+id/app_logo"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:layout_marginLeft="47dp"
		        android:layout_marginRight="47dp"
		        android:contentDescription="@string/logo"
		        android:src="@drawable/collections" />
		    
		    <ImageView android:id="@+id/question_mark"
		        android:layout_width="40dp"
		        android:layout_height="40dp"
		        android:layout_alignParentRight="true"
		        android:contentDescription="@string/question_mark"
		        android:src="@drawable/question_mark" />
		    
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />
    
    <RelativeLayout android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/buckets" >
        
        <EditText android:id="@+id/sign_in_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="18sp" />
        
        <View android:id="@+id/separator"
		        android:background="#DDDDDD"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:layout_below="@id/sign_in_username" />
        
        <EditText android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator"
            android:background="#00000000"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="11dp"
            android:paddingBottom="11dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp" />
        
    </RelativeLayout>
    
    <Button android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/blue_button"
        android:padding="18dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="sign_in_clicked" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/or"
        android:textSize="16sp"
        android:textColor="#FFFFFF" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="horizontal" >
        
        <Button android:id="@+id/create_account"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:padding="18dp"
		        android:text="@string/create_account"
		        android:textSize="16sp"
        		android:textStyle="bold"
		        android:onClick="create_account_clicked" />
        
        <Button android:id="@+id/browse_collections"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:padding="18dp"
		        android:text="@string/browse_collections"
		        android:textSize="16sp"
        		android:textStyle="bold"
		        android:onClick="browse_collections_clicked" />
           
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />
    
</LinearLayout>