<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <RelativeLayout android:id="@+id/header"
	    	android:layout_width="fill_parent"
	    	android:layout_height="45dp"
	    	android:background="#705EBF" >
	    	
	    	<ImageView android:id="@+id/header_login_button"
		        android:layout_width="45dp"
		        android:layout_height="45dp"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:padding="8dp"
		        android:contentDescription="@string/login"
		        android:src="@drawable/ic_launcher"
		        android:scaleType="fitCenter"
		        android:clickable="true"
		        android:onClick="header_login_clicked" />
	    	
	    	<LinearLayout
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:orientation="horizontal"
	    	    android:layout_alignParentRight="true" >
	        
			    <ImageView android:id="@+id/header_search_button"
			        android:layout_width="45dp"
			        android:layout_height="45dp"
			        android:layout_gravity="center"
			        android:padding="8dp"
			        android:contentDescription="@string/search"
			        android:src="@drawable/ic_launcher"
			        android:scaleType="fitCenter"
			        android:clickable="true"
			        android:onClick="header_search_clicked" />
			    
			    <ImageView android:id="@+id/header_add_collection_button"
			        android:layout_width="45dp"
			        android:layout_height="45dp"
			        android:layout_gravity="center"
			        android:padding="8dp"
			        android:contentDescription="@string/add_collection"
			        android:src="@drawable/ic_launcher"
			        android:scaleType="fitCenter"
			        android:clickable="true"
			        android:onClick="header_add_clicked"  />
			    
			    <ImageView android:id="@+id/header_side_menu_button"
			        android:layout_width="45dp"
			        android:layout_height="45dp"
			        android:layout_gravity="center"
			        android:padding="8dp"
			        android:contentDescription="@string/side_nav"
			        android:src="@drawable/ic_launcher"
			        android:scaleType="fitCenter"
			        android:clickable="true"
			        android:onClick="header_side_menu_clicked"  />
	    
	    	</LinearLayout>
	    
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/login_menu"
        android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@id/header"
   	    android:layout_alignParentLeft="true"
   	    android:background="#FF969696"
   	    android:visibility="gone" >
    
    <TextView android:id="@+id/login"
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:padding="10dp"
    	    android:text="@string/login"
    	    android:textColor="#FF000000"
    	    android:clickable="true"
    	    android:onClick="login_clicked" />
    
    <View android:id="@+id/sep0"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_below="@id/login"
        android:background="#FF000000" />
    
    <TextView android:id="@+id/signup"
    	    android:layout_width="100dp"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@id/sep0"
    	    android:padding="10dp"
    	    android:text="@string/signup"
    	    android:textColor="#FF000000"
    	    android:clickable="true"
    	    android:onClick="signup_clicked"  />
    
    </RelativeLayout>
    
    <ListView android:id="@+id/lvw_collections"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header" 
        android:visibility="visible"/>
    

</RelativeLayout>