<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF279700" >
    
<LinearLayout
    android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:orientation="vertical" >
    
    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="20dp"
		    android:orientation="vertical"
		    android:padding="15dp"
		    android:background="@drawable/rounded_grey" >
		    
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white" >
				    
		        <EditText android:id="@+id/edit_title"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:background="#00000000"
		            android:padding="10dp"
		            android:hint="@string/title"
		            android:textColor="#444444"
		            android:textSize="17sp" />
		        
		        <View android:id="@+id/sep0"
		            android:layout_width="match_parent"
		            android:layout_height="1dp"
		            android:layout_below="@id/edit_title"
		            android:background="#DDDDDD" />
		        
		        <EditText android:id="@+id/edit_description"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/sep0"
		            android:background="#00000000"
		            android:padding="10dp"
		            android:hint="@string/description"
		            android:textColor="#444444"
		            android:textSize="17sp" />
		        
		        <View android:id="@+id/sep1"
		            android:layout_width="match_parent"
		            android:layout_height="1dp"
		            android:layout_below="@id/edit_description"
		            android:background="#DDDDDD" />
		        
		        <TextView android:id="@+id/edit_category"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/sep1"
		            android:background="#00000000"
		            android:padding="10dp"
		            android:text="@string/category"
		            android:textColor="#444444"
		            android:textSize="17sp"
		            android:clickable="true"
		            android:onClick="select_category" />
		        
		        <TextView android:id="@+id/chosen_category"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/sep1"
		            android:layout_toRightOf="@id/edit_category"
		            android:background="#00000000"
		            android:padding="10dp"
		            android:textColor="#444444"
		            android:textSize="17sp" />
		        
		        <View android:id="@+id/sep2"
		            android:layout_width="match_parent"
		            android:layout_height="1dp"
		            android:layout_below="@id/edit_category"
		            android:background="#DDDDDD" />
		        
		        <TextView android:id="@+id/edit_privacy"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/sep2"
		            android:layout_gravity="center"
		            android:background="#00000000"
		            android:padding="10dp"
		            android:text="@string/privacy"
		            android:textColor="#444444"
		            android:textSize="17sp" />
		        
		        <CheckBox android:id="@+id/cbx_privacy"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_below="@id/sep2"
		            android:layout_toRightOf="@id/edit_privacy"
		            android:gravity="center" />
		        
        </RelativeLayout>
        
    </LinearLayout>
    
    <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:gravity="center"
           android:padding="10dp"
           android:orientation="horizontal"
           android:background="@drawable/rounded_blue"
           android:clickable="true"
           android:onClick="add_collection" >
              
              <ImageView
                  android:layout_width="40dp"
                  android:layout_height="40dp"
                  android:padding="5dp"
                  android:contentDescription="@string/add_collection"
                  android:src="@drawable/icon_add" />
          
            <TextView android:id="@+id/add_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/add_item"
                android:textSize="18sp"
                android:textColor="#121212"
                android:textStyle="bold" />
	            
        </LinearLayout>
        
</LinearLayout>    

</ScrollView>