<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <ImageView android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_launcher" />
    
    <RelativeLayout android:id="@+id/sign_in"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/buckets" >
        
        <EditText android:id="@+id/sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:padding="4dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />
        
        <View android:id="@+id/separator"
		        android:background="#DDDDDD"
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:layout_below="@id/sign_in_email" />
        
        <EditText android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator"
            android:background="#00000000"
            android:padding="4dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
        
    </RelativeLayout>
    
    <Button android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"
        android:onClick="sign_in_clicked" />

</LinearLayout>